<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/neige_val_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="70dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/neige_lbl_tv"
        app:layout_constraintTop_toBottomOf="@+id/pressure_val_tv" />

    <TextView
        android:id="@+id/neige_lbl_tv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:text="@string/neige"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_lbl_tv" />

    <TextView
        android:id="@+id/temp_val_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/temp_lbl_tv"
        app:layout_constraintTop_toBottomOf="@+id/date_tv" />

    <TextView
        android:id="@+id/pressure_val_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="70dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/pressure_lbl_tv"
        app:layout_constraintTop_toBottomOf="@+id/rain_val_tv" />

    <TextView
        android:id="@+id/rain_lbl_tv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:text="@string/pluie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_lbl_tv" />

    <TextView
        android:id="@+id/wind_lbl_tv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:text="@string/vent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_lbl_tv" />

    <TextView
        android:id="@+id/wind_val_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="68dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/wind_lbl_tv"
        app:layout_constraintTop_toBottomOf="@+id/temp_val_tv" />

    <TextView
        android:id="@+id/pressure_lbl_tv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:text="@string/pression"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rain_lbl_tv" />

    <TextView
        android:id="@+id/rain_val_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="72dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/rain_lbl_tv"
        app:layout_constraintTop_toBottomOf="@+id/wind_val_tv" />

    <TextView
        android:id="@+id/temp_lbl_tv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="120dp"
        android:text="@string/temperaturelbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_tv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>